 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 *
 * Revision history:
 *
 * 20190119 VE7FET
 * - Refactoring code to use Autotools for building o improve portability
 * - Extracted hardcoded path/filenames, placed in pathnames.h and made 
 *   paths variable, depending on what is passed as sysconfdir variable 
 *   to ./configure script.
 *
 * 20181024:
 * - Updated python scripts to use V5 Winlink Web Services
 * - Added a getchannel.py script to verify channel record
 * - Added a bash script for testing the python API for Winlink Services
 * - release 2.5.0
 *
 * 20180401
 * - Add ncurses to required build packages
 * - Fix rmschanstat because ifconfig output changed
 * - update channels.xml file.
 * - release 2.4.1
 *
 * 20140103:
 * - fixed namespace in base channels.xml used for new installs
 *
 * 20141030:
 * - additional updates to installing
 * - adjustments on channels password check
 *   to also provide a message to the connecting client
 * - release 2.4.0
 *
 * 20141028:
 * - added check for configured password in channels.xml
 *   (if not checked, gateway will seg fault during the
 *    login)
 * - updates to installing
 *
 * 20141025:
 * - added ability to set environment variables for rmsgw and
 *   rmsgw_aci (if configured, and the configured file
 *   exists)
 * - added (experimental) hooks for rmsgw and rmsgw_aci
 * - release candidate for 2.4.0
 *
 * 20141021:
 * - added ability to configure aci update intervals
 *
 * 20141019:
 * - update installation script to remove any existing DTD
 *   from channels.xml and replace with the new schema
 *   reference
 * - update installation script to cleanup obsolete/unused
 *   configuration values in gateway.conf
 * - cleanup dead code
 * - misc. code cleanup
 * - update admin-install.sh to set correct permission
 *   on version file
 * - fix corrupted updatechannel.py
 * - release candidate for 2.4.0
 *
 * 20141018:
 * - fixed pointer problem in upcase()